--- a/edt/config.json
+++ b/edt/config.json
@@ -3,3 +3,4 @@ Temporary commit content 10
 Temporary commit content 17
 Temporary commit content 18
 Temporary commit content 31
+Temporary commit content 32
