--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -12,3 +12,4 @@ Temporary commit content 69
 Temporary commit content 76
 Temporary commit content 96
 Temporary commit content 119
+Temporary commit content 120
