--- a/edt/config.json
+++ b/edt/config.json
@@ -13,3 +13,4 @@ Temporary commit content 123
 Temporary commit content 124
 Temporary commit content 131
 Temporary commit content 147
+Temporary commit content 148
