Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -3,3 +3,4 @@ Temporary commit content 13
 Temporary commit content 23
 Temporary commit content 39
 Temporary commit content 44
+Temporary commit content 52
