--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -14,3 +14,4 @@ Temporary commit content 96
 Temporary commit content 119
 Temporary commit content 120
 Temporary commit content 139
+Temporary commit content 145
