--- a/edt/config.json
+++ b/edt/config.json
@@ -8,3 +8,4 @@ Temporary commit content 42
 Temporary commit content 74
 Temporary commit content 84
 Temporary commit content 90
+Temporary commit content 112
