--- a/edt/config.json
+++ b/edt/config.json
@@ -12,3 +12,4 @@ Temporary commit content 112
 Temporary commit content 123
 Temporary commit content 124
 Temporary commit content 131
+Temporary commit content 147
