--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -13,3 +13,4 @@ Temporary commit content 76
 Temporary commit content 96
 Temporary commit content 119
 Temporary commit content 120
+Temporary commit content 139
