--- a/edt/config.json
+++ b/edt/config.json
@@ -5,3 +5,4 @@ Temporary commit content 18
 Temporary commit content 31
 Temporary commit content 32
 Temporary commit content 42
+Temporary commit content 74
