Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -15,3 +15,4 @@ Temporary commit content 119
 Temporary commit content 120
 Temporary commit content 139
 Temporary commit content 145
+Temporary commit content 149
